# mybalivillas

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.deploy.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: admin-panel.yml  backend.yml  frontend.yml
admin-api/: Cargo.toml  Dockerfile
admin-api/src/: main.rs
admin-api/src/handlers/: auth.rs  dashboard.rs  inquiries.rs  mod.rs  properties.rs  users.rs
admin-panel/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
api/: Cargo.toml  Dockerfile
api/src/: main.rs
api/src/handlers/: amenities.rs  auth.rs  availability.rs  bookings.rs  mod.rs  properties.rs  reviews.rs  users.rs
api/src/middleware/: auth.rs
api/src/models/: mod.rs
api/src/routes/: auth.rs  bookings.rs  mod.rs  properties.rs  users.rs
docs/: api.md  architecture.md  deployment.md  development.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
infrastructure/nginx/: Dockerfile  nginx-initial.conf  nginx.conf
infrastructure/scripts/: backup-db.sh  deploy-digitalocean.sh  deploy-local.sh  setup-vps.sh
migrations/: 001_initial.sql  002_seed_data.sql  002_seed_data_generated_images.sql  005_sample_listings.sql
scripts/: generate_area_images.py  generate_images.py  generate_images.sh  generate_sample_listings.py  generate_villa_images.py  import_scraped_listings.py  scrape_listings.py  scrape_villa_bali.py
shared/: Cargo.toml
shared/src/: auth.rs  db.rs  errors.rs  lib.rs  models.rs  utils.rs
shared/tests/: gen_hash.rs
(+54 files in other folders)
