[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate", "rust_decimal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
argon2 = "0.5"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
validator = { version = "0.19", features = ["derive"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
axum = { version = "0.8", features = ["json"] }
http = "1"
